working inefficient start

--- a/.env.defaults
+++ b/.env.defaults
@@ -4,14 +4,15 @@
 # into version control.
 
 # schema.prisma defaults
-DATABASE_URL=postgresql://postgres@localhost:5432/container-working-group
+DATABASE_URL=postgresql://redwood:redwood@db:5432/redwood
 
 # location of the test database for api service scenarios (defaults to ./.redwood/test.db if not set)
-TEST_DATABASE_URL=postgresql://postgres@localhost:5432/container-working-group-test
+# TEST_DATABASE_URL=postgresql://postgres@localhost:5432/container-working-group-test
 
 # disables Prisma CLI update notifier
 PRISMA_HIDE_UPDATE_MESSAGE=true
 
+SESSION_SECRET=the_very_model_of_a_modern_major_secret
 
 # Option to override the current environment's default api-side log level
 # See: https://redwoodjs.com/docs/logger for level options:
