--- a/.env.defaults
+++ b/.env.defaults
@@ -4,10 +4,10 @@
 # into version control.
 
 # schema.prisma defaults
-DATABASE_URL=postgresql://postgres_cwg:postgres_cwg@localhost:5432/container_working_group
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/container_working_group
 
 # location of the test database for api service scenarios (defaults to ./.redwood/test.db if not set)
-TEST_DATABASE_URL=postgresql://postgres_cwg:postgres_cwg@localhost:5432/container_working_group_test
+TEST_DATABASE_URL=postgresql://postgres:postgres@localhost:5432/container_working_group_test
 
 # disables Prisma CLI update notifier
 PRISMA_HIDE_UPDATE_MESSAGE=true
