--- a/Dockerfiles/coherence/Dockerfile.api
+++ b/Dockerfiles/coherence/Dockerfile.api
@@ -15,6 +15,6 @@ COPY .yarnrc.yml .yarnrc.yml
 RUN yarn install
 COPY . .
 
-RUN yarn rw build web
+RUN yarn rw build api
 
-CMD ["yarn", "rw", "build", "web"]
+CMD ["yarn", "rw", "serve", "api"]
