--- a/Dockerfiles/coherence/Dockerfile.web
+++ b/Dockerfiles/coherence/Dockerfile.web
@@ -15,6 +15,6 @@ COPY .yarnrc.yml .yarnrc.yml
 RUN yarn install
 COPY . .
 
-RUN yarn rw build api
+RUN yarn rw build web
 
-CMD ["yarn", "rw", "serve", "api"]
+CMD ["yarn", "rw", "serve", "web"]
