--- a/Dockerfiles/coherence/Dockerfile.web
+++ b/Dockerfiles/coherence/Dockerfile.web
@@ -1,18 +1,18 @@
-FROM node:18-alpine
+FROM node:18
 
 RUN yarn cache clean
 
-RUN mkdir /app
 WORKDIR /app
 
-COPY package.json .
-COPY web/package.json ./web/package.json
-
-COPY yarn.lock .
 COPY .yarn .yarn
-COPY .yarnrc.yml .yarnrc.yml
+COPY .yarnrc.yml .
+
+COPY package.json yarn.lock .
+
+COPY web/package.json ./web/
 
 RUN yarn install
+
 COPY . .
 
 RUN yarn rw build web
