--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -14,4 +14,8 @@ nmMode: hardlinks-local
 # Heads up: right now, Redwood expects this to be `node-modules`.
 nodeLinker: node-modules
 
+plugins:
+  - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
+    spec: "@yarnpkg/plugin-workspace-tools"
+
 yarnPath: .yarn/releases/yarn-3.5.1.cjs
