--- a/Dockerfiles/analyse/package.json
+++ b/Dockerfiles/analyse/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "execa": "7.1.1",
     "pretty-bytes": "6.1.0",
-    "pretty-ms": "8.0.0"
+    "pretty-ms": "8.0.0",
+    "yargs-parser": "21.1.1"
   }
 }
