--- a/Dockerfiles/analyse/package.json
+++ b/Dockerfiles/analyse/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "execa": "7.1.1",
+    "ora": "6.3.1",
     "pretty-bytes": "6.1.0",
     "pretty-ms": "8.0.0",
+    "strip-ansi": "7.1.0",
     "yargs-parser": "21.1.1"
   }
 }
