* ignore docker-compose override files * Add rough build.json for timings * Add docker-compose.yml file to work with aggregate Dockerfile as proof of concept

--- a/Dockerfiles/aggregate/Dockerfile
+++ b/Dockerfiles/aggregate/Dockerfile
@@ -93,8 +93,12 @@ CMD ["yarn", "rw-server"]
 
 # serve
 # ------------------------------------------------
-FROM serve_api as serve
+FROM serve_api as serve_web
+
+ENV API_HOST http://api-serve:8911
 
 COPY --from=web_build /app/web/dist /app/web/dist
 
-CMD ["yarn", "rw-server"]
+# CMD ["yarn", "rw-server"]
+
+CMD yarn rw serve web --apiHost ${API_HOST}
