testing adding @redwoodjs/internal to package list

--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
     "@redwoodjs/api": "5.2.3",
     "@redwoodjs/api-server": "5.2.3",
     "@redwoodjs/auth-dbauth-api": "5.2.3",
-    "@redwoodjs/graphql-server": "5.2.3"
+    "@redwoodjs/graphql-server": "5.2.3",
+    "@redwoodjs/internal": "5.2.3"
   }
 }
